static/sudokugame/css/board.css
#left-panel-wrapper {
    width: 100%;
    margin: auto;
}

#board-container {
    width: 35%;
}

#game-board {
    border-collapse: collapse;
    border: 2px solid black;
    width: 100%;
    box-sizing: border-box;
    border-spacing: 0;
}

.game-cell, .game-row {
    display: flex;
}

.game-row {
    height: 11.11%;
}

.game-cell {
    flex-basis: 11.11%;
    position: relative;
    display: flex;
    border-right: 1px solid lightgray;
    border-bottom: 1px solid lightgray;
    box-sizing: border-box;
}

.game-cell:after {
    content: "";
    padding-bottom: 100%;
    display: block;
}

.game-cell:hover {
    cursor: pointer;
    overflow: hidden;
}

.game-cell:nth-child(3), .game-cell:nth-child(6) {
    border-right: 2px solid black;
}

.game-cell:last-child {
    border-right: none;
}

.game-row:nth-child(3) .game-cell, .game-row:nth-child(6) .game-cell {
    border-bottom: 2px solid black;
}

.game-row:last-child .game-cell {
    border-bottom: none;
}

.cell-value {
    display: inline-block;
    position: absolute;
    color: darkslategray;
    text-align: center;
    top: 0;
    left: 0;
    margin: auto;
    font-size: 2.5vw;
    width: 100%;
    height: 100%;
}

.correct-cell {
    color: lawngreen;
}

.wrong-cell {
    color: red;
}

/* Based on @T30's answer: https://stackoverflow.com/questions/11997032/how-to-get-box-shadow-on-left-right-sides-only */

.related-col-cell {
    box-shadow: inset -6px 0 6px -6px #6495ED, inset 6px 0 6px -6px #6495ED;
}

.related-row-cell {
    box-shadow: inset 0 -6px 6px -6px #6495ED, inset 0 6px 6px -6px #6495ED;
}

.related-grid-cell {
    background-color: rgba(65, 105, 225, 0.2);
}

.game-cell:hover {
    background-color: rgba(65, 105, 225, 0.2);
}

#focused-cell {
    background-color: rgba(65, 105, 225, 0.6);
}

.notes-grid {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    font-size: 0;
    line-height: 0;
}

.notes-grid-cell {
    position: relative;
    width: 33.33%;
    height: 33.33%;
    display: none;
    font-size: 10px;
    line-height: 20px;
    text-align: center;
}

